<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_scanner">

    <fragment
        android:id="@+id/navigation_generator"
        android:name="app.qrscan.ui.generator.GeneratorFragment"
        android:label="@string/generate"
        tools:layout="@layout/fragment_generator">
        <action
            android:id="@+id/from_generator_to_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="app.qrscan.ui.scanner.ScannerFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scanner">
        <action
            android:id="@+id/from_scanner_to_details"
            app:destination="@id/navigation_details" />
        <action
            android:id="@+id/from_scanner_to_permission"
            app:destination="@id/navigation_permission" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="app.qrscan.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="app.qrscan.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/from_history_to_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="app.qrscan.ui.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="id"
            app:argType="long"/>
    </fragment>

    <dialog
        android:id="@+id/navigation_permission"
        android:name="app.qrscan.ui.dialogs.PermissionDialog"
        tools:layout="@layout/dialog_permission">
        <argument
            android:name="permission"
            app:argType="string"/>
    </dialog>

</navigation>
